# binary-greedy-meshing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
libraries/cxxpool/include/: cxxpool.h
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
src/: constants.h  light.h  main.cpp  mesher.h  noise.h  shader.h  skybox.h
src/data/: level_file.h  rle.h
src/misc/: camera.h  noise.h  shader.h  timer.h  utility.h
src/rendering/: chunk_renderer.h
src/shaders/: main.fs  main.vs  skybox.fs  skybox.vs
